<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">
    <androidx.preference.PreferenceCategory
        android:title="@string/gesture_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.ListPreference
            android:layout="@layout/preference_item"
            android:key="up"
            android:defaultValue="0"
            android:entries="@array/tri_key_setting_describe"
            android:entryValues="@array/tri_key_setting_values"
            android:title="@string/up" />
        <androidx.preference.ListPreference
            android:layout="@layout/preference_item"
            android:key="center"
            android:defaultValue="0"
            android:entries="@array/tri_key_setting_describe"
            android:entryValues="@array/tri_key_setting_values"
            android:title="@string/center" />
        <androidx.preference.ListPreference
            android:layout="@layout/preference_item"
            android:key="bottom"
            android:defaultValue="0"
            android:entries="@array/tri_key_setting_describe"
            android:entryValues="@array/tri_key_setting_values"
            android:title="@string/bottom" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:key="misc"
        android:title="@string/misc_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.CheckBoxPreference
            android:layout="@layout/preference_item"
            android:defaultValue="false"
            android:key="force_linear"
            android:title="@string/force_linear_mode"
            android:summary="@string/force_linear_mode_summary" >
        </androidx.preference.CheckBoxPreference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/refresh_rate"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.CheckBoxPreference
            android:layout="@layout/preference_item"
            android:defaultValue="false"
            android:key="mDisableRefreshRatePolicy"
            android:title="@string/disable_refresh_rate_policy_title"
            android:summary="@string/disable_refresh_rate_policy_summary" >
        </androidx.preference.CheckBoxPreference>
        <androidx.preference.MultiSelectListPreference
            android:layout="@layout/preference_item"
            android:key="m60HzTopApps"
            android:summary="@string/force_60hz_apps_summary"
            android:title="@string/force_60hz_apps">
        </androidx.preference.MultiSelectListPreference>
        <androidx.preference.MultiSelectListPreference
            android:layout="@layout/preference_item"
            android:key="90Hz_GameApps"
            android:summary="@string/m90Hz_game_apps_summary"
            android:title="@string/m90Hz_game_apps">
        </androidx.preference.MultiSelectListPreference>
        <androidx.preference.MultiSelectListPreference
            android:layout="@layout/preference_item"
            android:key="mVideoApps"
            android:summary="@string/video_apps_summary"
            android:title="@string/video_apps">
        </androidx.preference.MultiSelectListPreference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/battery_info_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:key="batt_fcc"
            android:title="@string/batt_fcc"
            android:summary="N/A">
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:key="batt_cur"
            android:title="@string/batt_cur"
            android:summary="N/A">
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/follow_me_title"
        android:layout="@layout/preference_category_widget">
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:title="@string/author"
            android:summary="Art_Chen">
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:title="@string/follow_me">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://weibo.com/imchenxy"/>
        </androidx.preference.Preference>
        <androidx.preference.Preference
            android:layout="@layout/preference_item"
            android:title="@string/follow_me_bili">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://space.bilibili.com/7697432"/>
        </androidx.preference.Preference>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>